# KashirLauncher

./: README.md  README_FR.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx  react-app-env.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  security.rs
src-tauri/src/minecraft/: auth.rs  launch.rs  mod.rs
src/components/: AppShell.tsx  TopBar.tsx
src/pages/: Home.tsx
src/pages/minecraft/: AuthLoading.tsx  Minecraft.tsx
src/pages/vms/: VMs.tsx
src/secure/: stronghold.ts
src/ui/: PageTransition.tsx
