[package]
name = "kashirlauncher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kashirlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.29", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
log = "0.4.27"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tauri-plugin-updater = "2.9.0"
anyhow = "1.0.99"
tauri-plugin-shell = "2.3.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
tauri-plugin-stronghold = "2.3.0"
rand = "0.9.2"
base64 = "0.22.1"
getrandom = "0.3.3"
[target.'cfg(windows)'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
